--- a/ticket/ticket.twig
+++ b/ticket/ticket.twig
@@ -212,7 +212,7 @@
                 
                 $.ajax({
                     url: url,
-                    method: 'POST',
+                    method: 'DELETE',
                     data: postData,
                     success: function() {
                         $link.closest('li').fadeOut(function() {
