--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -64,11 +64,14 @@
 					<span class="sp-description sp-filesize" style="color: #9ca3af; font-size: 0.875rem; margin-left: 0.5rem;">({{ attachment.upload.size }})</span>
 					{% if message.by != 0 %}
 						<span class="sp-remove-attachment-text" 
-							  style="color: #ef4444; font-size: 0.875rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;"
-							  data-url="{{ route('ticket.frontend.attachment.destroy') }}"
-							  data-token="{{ Request.input('token', '') }}"
-							  data-attachment-id="{{ attachment.id }}"
-							  data-hash="{{ attachment.upload_hash }}">(Remove)</span>
+							  style="color: #ef4444; font-size: 0.875rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove)</span>
+						<div class="sp-delete-attachment sp-hidden"
+							 data-url="{{ route('ticket.frontend.attachment.destroy') }}"
+							 data-attachment-id="{{ attachment.id }}"
+							 data-size="{{ attachment.upload.getRawOriginal('size') }}"
+							 data-hash="{{ attachment.upload_hash }}"
+							 data-silent="false"
+							 style="display: none;"></div>
 					{% endif %}
 				</li>
 			{% endfor %}
