--- a/head_common.twig
+++ b/head_common.twig
@@ -1724,9 +1724,9 @@ input[type="submit"]:hover {
   margin: 0 !important;
 }
 
-/* Fix delete button in reply history attachments - no longer used, replaced by Remove link */
+/* Delete button in reply history attachments */
 .sp-attachments li .sp-delete-attachment {
-  display: none !important;
+  display: flex !important;
 }
 
 .sp-delete-attachment svg {
